--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Search mountain</h1>
         <div class="search">
-            <input type="text" placeholder = "Type to search...">
+            <input id="searchBar" type="text" placeholder = "Type to search...">
             <button type="submit"><i class="fa fa-search"></i></button>
         </div>
         
