nicer ui for navbar

--- a/tow.html
+++ b/tow.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <ul>
-            <li><a class="active" href="tow.html">Today's weather</a></li>
+            <li><a class="active" href="tow.html">Today's weather forcast</a></li>
             <li><a class ="navbar" href="#csc">Current snow conditions</a></li>
-            <li><a class ="navbar" href="#tw">Tomorrow's weather</a></li>
+            <li><a class ="navbar" href="#tw">Tomorrow's weather forcast</a></li>
             <li class="icon"><a href="index.html"><img src="/images/icon128-2.png" width = "32" height = "32"></a></li>
         </ul>
     </body>
