revisted index.html improving button and adding js functionality

--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 
 <html>
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css">
+        
     </head>
     <body>
         <h1>Search mountain</h1>
-        <div class="search">
-            <input id="searchBar" type="text" placeholder = "Type to search...">
-            <button type="submit"><i class="fa fa-search"></i></button>
-        </div>
-        
+        <form class="search">
+            <input id="searchBar" type="text" placeholder = "Type to search..." value ="">
+            <button id="searchButton" type="button" title="search" ><i class="fa fa-search"></i></button>
+            <script src="indexScript.js"></script>
+        </form>
+        <p id="test"></p>
     </body>
 </html>
