--- a/tow.html
+++ b/tow.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles2.css">
+        <script src="towScript.js"></script>
     </head>
     <body>
         <ul>
@@ -11,5 +12,6 @@
             <li><a class ="navbar" href="#tw">Tomorrow's weather forecast</a></li>
             <li class="icon"><a href="index.html"><img src="/images/icon128-2.png" width = "32" height = "32"></a></li>
         </ul>
+        <p id="test"></p>
     </body>
 </html>
