now succesfully able to go to next page with enter key and onClick

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Search mountain</h1>
-        <form class="search">
+        <form class="search" action="tow.html" method="POST">
             <input id="searchBar" type="text" placeholder = "Type to search..." value ="">
             <button id="searchButton" type="button" title="search" ><i class="fa fa-search"></i></button>
             <script src="indexScript.js"></script>
