--- a/tow.html
+++ b/tow.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="styles2.css">
         <script src="towScript.js"></script>
     </head>
