bottom info html added

--- a/tow.html
+++ b/tow.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styles2.css">
+        <link rel="stylesheet" href="towStyles.css">
         <script src="towScript.js"></script>
     </head>
     <body>
@@ -13,6 +13,17 @@
             <li><a class ="navbar" href="#tw">Tomorrow's weather forecast</a></li>
             <li class="icon"><a href="index.html"><img src="/images/icon128-2.png" width = "32" height = "32"></a></li>
         </ul>
-        <p id="test"></p>
+        <div class="bottom">
+            <h1>Bottom</h1>
+            <h6>High of:</h6> <p>hi</p><br>
+            <h6>Low of:</h6> <p>hi</p><br>
+            <h6>Windchill:</h6> <p>hi</p><br><br>
+
+            <h6>Expected snowfall:</h6> <p>hi</p><br>
+            <h6>Expected rainfall:</h6> <p>hi</p><br><br>
+
+            <h6>Avg wind speed:</h6> <p>hi</p><br>
+            <h6>Max wind speed:</h6> <p>hi</p>
+        </div>
     </body>
 </html>
