top side and colouring complete

--- a/tow.html
+++ b/tow.html
@@ -25,5 +25,18 @@
             <h6>Avg wind speed:</h6> <p>hi</p><br>
             <h6>Max wind speed:</h6> <p>hi</p>
         </div>
+
+        <div class="top">
+            <h1>Top</h1>
+            <h6>High of:</h6> <p>hi</p><br>
+            <h6>Low of:</h6> <p>hi</p><br>
+            <h6>Windchill:</h6> <p>hi</p><br><br>
+
+            <h6>Expected snowfall:</h6> <p>hi</p><br>
+            <h6>Expected rainfall:</h6> <p>hi</p><br><br>
+
+            <h6>Avg wind speed:</h6> <p>hi</p><br>
+            <h6>Max wind speed:</h6> <p>hi</p>
+        </div>
     </body>
 </html>
