sucessfully read from api and string manipulate url

--- a/tow.html
+++ b/tow.html
@@ -15,28 +15,28 @@
         </ul>
         <div class="bottom">
             <h1>Bottom</h1>
-            <h6>High of:</h6> <p>hi</p><br>
-            <h6>Low of:</h6> <p>hi</p><br>
-            <h6>Windchill:</h6> <p>hi</p><br><br>
+            <h6>High of:</h6> <p id="b1">hi</p><br>
+            <h6>Low of:</h6> <p id="b2">hi</p><br>
+            <h6>Windchill:</h6> <p id="b3">hi</p><br><br>
 
-            <h6>Expected snowfall:</h6> <p>hi</p><br>
-            <h6>Expected rainfall:</h6> <p>hi</p><br><br>
+            <h6>Expected snowfall:</h6> <p id="b4">hi</p><br>
+            <h6>Expected rainfall:</h6> <p id="b5">hi</p><br><br>
 
-            <h6>Avg wind speed:</h6> <p>hi</p><br>
-            <h6>Max wind speed:</h6> <p>hi</p>
+            <h6>Avg wind speed:</h6> <p id="b6">hi</p><br>
+            <h6>Max wind speed:</h6> <p id="b7">hi</p>
         </div>
 
         <div class="top">
             <h1>Top</h1>
-            <h6>High of:</h6> <p>hi</p><br>
-            <h6>Low of:</h6> <p>hi</p><br>
-            <h6>Windchill:</h6> <p>hi</p><br><br>
+            <h6>High of:</h6> <p id="t1">hi</p><br>
+            <h6>Low of:</h6> <p id="t2">hi</p><br>
+            <h6>Windchill:</h6> <p id="t3">hi</p><br><br>
 
-            <h6>Expected snowfall:</h6> <p>hi</p><br>
-            <h6>Expected rainfall:</h6> <p>hi</p><br><br>
+            <h6>Expected snowfall:</h6> <p id="t4">hi</p><br>
+            <h6>Expected rainfall:</h6> <p id="t5">hi</p><br><br>
 
-            <h6>Avg wind speed:</h6> <p>hi</p><br>
-            <h6>Max wind speed:</h6> <p>hi</p>
+            <h6>Avg wind speed:</h6> <p id="t6">hi</p><br>
+            <h6>Max wind speed:</h6> <p id="t7">hi</p>
         </div>
     </body>
 </html>
