displaying high of temp and succesfully adding loading screen

--- a/tow.html
+++ b/tow.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="towStyles.css">
-        <script src="towScript.js"></script>
+        
     </head>
     <body>
         <ul>
@@ -15,7 +15,7 @@
         </ul>
         <div class="bottom">
             <h1>Bottom</h1>
-            <h6>High of:</h6> <p id="b1">hi</p><br>
+            <h6>High of:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b1"></p><br>
             <h6>Low of:</h6> <p id="b2">hi</p><br>
             <h6>Windchill:</h6> <p id="b3">hi</p><br><br>
 
@@ -38,5 +38,6 @@
             <h6>Avg wind speed:</h6> <p id="t6">hi</p><br>
             <h6>Max wind speed:</h6> <p id="t7">hi</p>
         </div>
+        <script src="towScript.js"></script>
     </body>
 </html>
