completed 2 data outpus and changed displayLoading and hiding for all class elements

--- a/tow.html
+++ b/tow.html
@@ -16,7 +16,7 @@
         <div class="bottom">
             <h1>Bottom</h1>
             <h6>High of:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b1"></p><br>
-            <h6>Low of:</h6> <p id="b2">hi</p><br>
+            <h6>Low of:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b2"></p><br>
             <h6>Windchill:</h6> <p id="b3">hi</p><br><br>
 
             <h6>Expected snowfall:</h6> <p id="b4">hi</p><br>
