--- a/tow.html
+++ b/tow.html
@@ -17,7 +17,7 @@
             <h1>Bottom</h1>
             <h6>High of:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b1"></p><br>
             <h6>Low of:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b2"></p><br>
-            <h6>Windchill:</h6> <p id="b3">hi</p><br><br>
+            <h6>Avg Windchill:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b3"></p><br><br>
 
             <h6>Expected snowfall:</h6> <p id="b4">hi</p><br>
             <h6>Expected rainfall:</h6> <p id="b5">hi</p><br><br>
