bot snowfall added

--- a/tow.html
+++ b/tow.html
@@ -19,7 +19,7 @@
             <h6>Low of:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b2"></p><br>
             <h6>Avg Windchill:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b3"></p><br><br>
 
-            <h6>Expected snowfall:</h6> <p id="b4">hi</p><br>
+            <h6>Expected snowfall:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b4"></p><br>
             <h6>Expected rainfall:</h6> <p id="b5">hi</p><br><br>
 
             <h6>Avg wind speed:</h6> <p id="b6">hi</p><br>
