expected snowfall and expected rain

--- a/tow.html
+++ b/tow.html
@@ -19,8 +19,8 @@
             <h6>Low of:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b2"></p><br>
             <h6>Avg Windchill:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b3"></p><br><br>
 
-            <h6>Expected snowfall:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b4"></p><br>
-            <h6>Expected rainfall:</h6> <p id="b5">hi</p><br><br>
+            <h6>Expected Snowfall:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b4"></p><br>
+            <h6>Expected rainfall:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b5"></p><br><br>
 
             <h6>Avg wind speed:</h6> <p id="b6">hi</p><br>
             <h6>Max wind speed:</h6> <p id="b7">hi</p>
