--- a/tow.html
+++ b/tow.html
@@ -22,7 +22,7 @@
             <h6>Expected Snowfall:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b4"></p><br>
             <h6>Expected rainfall:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b5"></p><br><br>
 
-            <h6>Avg wind speed:</h6> <p id="b6">hi</p><br>
+            <h6>Avg wind speed:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b6"></p><br>
             <h6>Max wind speed:</h6> <p id="b7">hi</p>
         </div>
 
