bottom display complete able to keep everythin ginline

--- a/tow.html
+++ b/tow.html
@@ -15,15 +15,15 @@
         </ul>
         <div class="bottom">
             <h1>Bottom</h1>
-            <h6>High of:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b1"></p><br>
-            <h6>Low of:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b2"></p><br>
-            <h6>Avg Windchill:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b3"></p><br><br>
+            <div class="main"><div class="dat">High of:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="b1"></p> </div>
+            <div class="main"><div class="dat">Low of:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="b2"></p></div>
+            <div class="main"><div class="dat">Avg Windchill:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="b3"></p></div><br>
 
-            <h6>Expected Snowfall:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b4"></p><br>
-            <h6>Expected rainfall:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b5"></p><br><br>
+            <div class="main"><div class="dat">Expected Snowfall:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="b4"></p></div>
+            <div class="main"><div class="dat">Expected rainfall:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="b5"></p></div><br>
 
-            <h6>Avg wind speed:</h6> <div class="stage"><span class="dot-flashing"></span></div> <p id="b6"></p><br>
-            <h6>Max wind speed:</h6> <p id="b7">hi</p>
+            <div class="main"><div class="dat">Avg wind speed:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="b6"></div></p>
+            <div class="main"><div class="dat">Max wind speed:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="b7"></div></p>
         </div>
 
         <div class="top">
