top and bottom working, need css styling

--- a/tow.html
+++ b/tow.html
@@ -28,16 +28,17 @@
 
         <div class="top">
             <h1>Top</h1>
-            <h6>High of:</h6> <p id="t1">hi</p><br>
-            <h6>Low of:</h6> <p id="t2">hi</p><br>
-            <h6>Windchill:</h6> <p id="t3">hi</p><br><br>
+            <div class="main"><div class="dat">High of:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t1"></p> </div>
+            <div class="main"><div class="dat">Low of:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t2"></p></div>
+            <div class="main"><div class="dat">Avg Windchill:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t3"></p></div><br>
 
-            <h6>Expected snowfall:</h6> <p id="t4">hi</p><br>
-            <h6>Expected rainfall:</h6> <p id="t5">hi</p><br><br>
+            <div class="main"><div class="dat">Expected Snowfall:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t4"></p></div>
+            <div class="main"><div class="dat">Expected rainfall:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t5"></p></div><br>
 
-            <h6>Avg wind speed:</h6> <p id="t6">hi</p><br>
-            <h6>Max wind speed:</h6> <p id="t7">hi</p>
+            <div class="main"><div class="dat">Avg wind speed:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t6"></div></p>
+            <div class="main"><div class="dat">Max wind speed:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t7"></div></p>
         </div>
         <script src="towScript.js"></script>
+        <script src="towScriptTop.js"></script>
     </body>
 </html>
