--- a/tow.html
+++ b/tow.html
@@ -28,15 +28,19 @@
 
         <div class="top">
             <h1>Top</h1>
-            <div class="main"><div class="dat">High of:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t1"></p> </div>
-            <div class="main"><div class="dat">Low of:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t2"></p></div>
-            <div class="main"><div class="dat">Avg Windchill:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t3"></p></div><br>
+            <div class="main"><div class="dat">High of:</div> <div class="stage"><span class="dot-flashingt"></span></div> <p id="t1"></p> </div>
+            <div class="main"><div class="dat">Low of:</div> <div class="stage"><span class="dot-flashingt"></span></div> <p id="t2"></p></div>
+            <div class="main"><div class="dat">Avg Windchill:</div> <div class="stage"><span class="dot-flashingt"></span></div> <p id="t3"></p></div><br>
 
-            <div class="main"><div class="dat">Expected Snowfall:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t4"></p></div>
-            <div class="main"><div class="dat">Expected rainfall:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t5"></p></div><br>
+            <div class="main"><div class="dat">Expected Snowfall:</div> <div class="stage"><span class="dot-flashingt"></span></div> <p id="t4"></p></div>
+            <div class="main"><div class="dat">Expected rainfall:</div> <div class="stage"><span class="dot-flashingt"></span></div> <p id="t5"></p></div><br>
 
-            <div class="main"><div class="dat">Avg wind speed:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t6"></div></p>
-            <div class="main"><div class="dat">Max wind speed:</div> <div class="stage"><span class="dot-flashing"></span></div> <p id="t7"></div></p>
+            <div class="main"><div class="dat">Avg wind speed:</div> <div class="stage"><span class="dot-flashingt"></span></div> <p id="t6"></div></p>
+            <div class="main"><div class="dat">Max wind speed:</div> <div class="stage"><span class="dot-flashingt"></span></div> <p id="t7"></div></p>
+        </div>
+        <div class="location">
+            <p>Mountain:</p>
+            <p id="loc"></p>
         </div>
         <script src="towScript.js"></script>
         <script src="towScriptTop.js"></script>
