--- a/tow.html
+++ b/tow.html
@@ -9,7 +9,7 @@
     <body>
         <ul>
             <li><a class="active" href="tow.html">Today's weather forecast</a></li>
-            <li><a class ="navbar" href="#csc">Current snow conditions</a></li>
+            <li><a class ="navbar" href="csc.html">Current snow conditions</a></li>
             <li><a class ="navbar" href="#tw">Tomorrow's weather forecast</a></li>
             <li class="icon"><a href="index.html"><img src="/images/icon128-2.png" width = "32" height = "32"></a></li>
         </ul>
