snow conditions page complete, error trapping

--- a/csc.html
+++ b/csc.html
@@ -15,7 +15,7 @@
         </ul>
         <div class="sc">
             <h1>Snow Conditions</h1>
-            <div class="main"><div class="dat">Botom snow depth: </div> <div class="stage"><span class="dot-flashing"></span></div> <p id="sc1"></p> </div>
+            <div class="main"><div class="dat">Bottom snow depth: </div> <div class="stage"><span class="dot-flashing"></span></div> <p id="sc1"></p> </div>
             <div class="main"><div class="dat">Top snow depth: </div> <div class="stage"><span class="dot-flashing"></span></div> <p id="sc2"></p></div><br>
             <div class="main"><div class="dat">Fresh snow: </div> <div class="stage"><span class="dot-flashing"></span></div> <p id="sc3"></p></div><br>
             <div class="main"><div class="dat">Last snow fall date: </div> <div class="stage"><span class="dot-flashing"></span></div> <p id="sc4"></p></div>
