tomorrow weather complete

--- a/csc.html
+++ b/csc.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a class="navbar" href="tow.html">Today's weather forecast</a></li>
             <li><a class ="active" href="csc.html">Current snow conditions</a></li>
-            <li><a class ="navbar" href="#tw">Tomorrow's weather forecast</a></li>
+            <li><a class ="navbar" href="tw.html">Tomorrow's weather forecast</a></li>
             <li class="icon"><a href="index.html"><img src="/images/icon128-2.png" width = "32" height = "32"></a></li>
         </ul>
         <div class="sc">
