--- a/tw.html
+++ b/tw.html
@@ -3,14 +3,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="towStyles.css">
+        <link rel="stylesheet" href="twStyles.css">
         
     </head>
     <body>
         <ul>
-            <li><a class="active" href="tow.html">Today's weather forecast</a></li>
+            <li><a class="navbar" href="tow.html">Today's weather forecast</a></li>
             <li><a class ="navbar" href="csc.html">Current snow conditions</a></li>
-            <li><a class ="navbar" href="tw.html">Tomorrow's weather forecast</a></li>
+            <li><a class ="active" href="tw.html">Tomorrow's weather forecast</a></li>
             <li class="icon"><a href="index.html"><img src="/images/icon128-2.png" width = "32" height = "32"></a></li>
         </ul>
         <div class="bottom">
@@ -38,11 +38,13 @@
             <div class="main"><div class="dat">Avg wind speed:</div> <div class="stage"><span class="dot-flashingt"></span></div> <p id="t6"></div></p>
             <div class="main"><div class="dat">Max wind speed:</div> <div class="stage"><span class="dot-flashingt"></span></div> <p id="t7"></div></p>
         </div>
+        
+
         <div class="location">
             <p>Mountain:</p>
             <p id="loc"></p>
         </div>
-        <script src="towScript.js"></script>
-        <script src="towScriptTop.js"></script>
+        <script src="twScript.js"></script>
+        <script src="twScriptTop.js"></script>
     </body>
 </html>
