--- a/csc.html
+++ b/csc.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="cscStyles.css">
-        
+        <script type="text/javascript" src="env.js"></script>
     </head>
     <body>
         <ul>
